--- a/Flamecloud-sagarkothadiya/src/App.css
+++ b/Flamecloud-sagarkothadiya/src/App.css
@@ -1,18 +1,4 @@
-.App {
-  text-align: center;
+body{
   background: #F5F5F5;
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  place-items: center;
+ 
 }
-
-#dashbord{
-  background-color: white;
-  padding: 120px;
-  width: 90%;
-  height: 90%;
-  
-  border-radius: 5px;
-}
-
